# network_diffusion

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  deployment.sh  events.csv  flat_spreading.py  install.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  src.py  torch_icm.ipynb  torch_micm.ipynb
.github/: dependabot.yml  deployment.sh  deployment_doodle.sh  get_version.sh  update_version.sh
.github/prompts/: plan-camelCaseName.prompt.md
.github/workflows/: codeql.yml  package-build.yml  tests.yml
aaa/: flat_example.py  multi_example.py
c_modules/: cogsnet_compute.c  cogsnet_compute.h  cogsnet_lib.c  cogsnet_lib.h
docs/: Makefile  class-diagram.drawio
docs/source/: aux_code.rst  code.rst  compartmental_graph_example.rst  conf.py  examples.rst  flat_spreading_example.rst  guide.rst  index.rst  installation.rst  module_examples.rst  mulitilayer_network_example.rst  multi_spreading_example.rst  multilayer_network_example.rst  net_collection.rst  network_models.rst  performing_experiments.rst  propagation_model_example.rst  quick_info.rst  reference_guide.rst  seed_selection.rst  simulator_example.rst  spreading_models.rst
docs/source/examples/: compartmental_graph_example.rst  multilayer_network_example.rst  propagation_model_example.rst  simulator_example.py  simulator_example.rst
docs/source/guide/: aux_code.rst  mds.rst  network_models.rst  performing_experiments.rst  seed_selection.rst
env/: conda.yml  pip_dev.txt  pip_prod.txt
network_diffusion/: __init__.py  experiment_logger.py  flat_spreading.py  logger.py  metrics.py  model.py  multi_spreading.py  multi_test.py  multilayer_abstract_network.py  multilayer_network.py  multiplex_network.py  propagation_model.py  simulator.py  temporal_spreading.py  utils.py
network_diffusion/mln/: __init__.py  actor.py  cbim.py  centralities.py  centrality_discount.py  driver_actors.py  functions.py  kppshell.py  mln_actor.py  mln_network.py  mlnetwork.py  mlnetwork_torch.py  nx_functions.py
network_diffusion/mln/mds/: __init__.py  greedy_search.py  utils.py  (+1 more)
network_diffusion/models/: ICM_model.py  ICM_model2.py  __init__.py  base.py  base_ml_model.py  base_model.py  base_models.py  base_tp_model.py  dsaa_algo.py  dsaa_model.py  mic_model.py  mlt_model.py  tne_model.py
network_diffusion/nets/: __init__.py  l2_course_net.py  mln_generator.py  toy_network_cim.py  toy_network_kppshell.py  toy_network_piotr.py
network_diffusion/networks/: toy_network_cim.py  toy_network_piotr.py
network_diffusion/seeding/: CBIM.py  __init__.py  base_selector.py  betweenness_selector.py  cbim.py  cbim_selector.py  cim.py  closeness_selector.py  degree_discount.py  degreecentrality_selector.py  driveractor_selector.py  drivernode_selector.py  katz_selector.py  kppshell_selector.py  kshell_selector.py  mocking_selector.py  mocky_selector.py  neighbourhoodsize_selector.py  pagerank_selector.py  random_selector.py  single_stage.py  voterank_selector.py
network_diffusion/tests/: __init__.py  test_experiment_logger.py  test_flat_sperading.py  test_logger.py  test_metrics.py  test_multi_spreading.py  test_multilayer_network.py  test_propagation_model.py  test_simulator.py  test_utils.py
network_diffusion/tpn/: __init__.py  cogsnet_lib.py  dynamic_loader.py  functions.py  l2_course_net.py  tpnetwork.py
requirements/: develop.txt  environment.yml  init.sh  prod.txt  production.txt
scripts/: britishise_docstrings.py
tests/: flat_test.py  multi_test.py
tests/networks/: aucs.mpx  bankwiring.mpx  fftwyt.mpx  florentine.mpx  monastery.mpx  readme.txt  tailorshop.mpx  test_bad
(+52 files in other folders)
