[build-system]
requires = ["setuptools~=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "network_diffusion"
version = "0.18.0"
requires-python = ">=3.12"
authors = [
    {name = "Michał Czuba", email="michal.czuba@pwr.edu.pl"},
    {name = "Piotr Bródka", email="piotr.brodka@pwr.edu.pl"},
]
description = "Network Diffusion - a package for simulating spreading phenomena."
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "influence maximisation",
    "influence maximization",
    "multilayer networks",
    "networkx",
    "network science",
    "phenomena spreading",
    "simulation",
    "social influence",
    "social networks",
    "spreading",
    "temporal networks",
]
dynamic = ["dependencies", "readme"]

[project.urls]
Homepage = "https://github.com/anty-filidor/network_diffusion"
Documentation = "https://network-diffusion.readthedocs.io/en/latest/"
Issues = "https://github.com/anty-filidor/network_diffusion/issues"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:torch.jit.frontend"]
